fix spacing on main header

--- a/src/App.scss
+++ b/src/App.scss
@@ -467,6 +467,7 @@ figure.logo {
       width: 100%;
       display: grid;
       grid-template-columns: repeat(7, 1fr);
+      grid-column-gap: 1rem;
       background-color: transparent;
       height: 6rem;
       margin-top: 0;
